reverted to previous folder organization

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/"
                 ><img
                   class="card-img-top"
-                  src="portfolio/images/global-covid-vaccine-apartheid.png"
+                  src="images/global-covid-vaccine-apartheid.png"
                   alt="Global Covid Vaccine Apartheid"
               /></a>
               <div class="card-body">
@@ -105,7 +105,7 @@
               <a target="_blank" href = "https://kwstancil.github.io/poverty-usa-counties/"
                 ><img
                   class="card-img-top"
-                  src="portfolio/images/patterns-economic-hardship-us-counties.png"
+                  src="images/patterns-economic-hardship-us-counties.png"
                   alt="Patterns of Economic Hardship in the U.S."
               /></a>
               <div class="card-body">
@@ -123,7 +123,7 @@
               <a target="_blank" href = "https://kwstancil.github.io/median-rent-usa-counties/"
                 ><img
                   class="card-img-top"
-                  src="portfolio/images/median-rent-us-counties.png"
+                  src="images/median-rent-us-counties.png"
                   alt="Renting in the USA"
               /></a>
               <div class="card-body">
@@ -141,7 +141,7 @@
               <a target="_blank" href = "https://kwstancil.github.io/housing-patterns-ky/"
                 ><img
                   class="card-img-top"
-                  src="portfolio/images/housing-patterns-ky-counties.png"
+                  src="images/housing-patterns-ky-counties.png"
                   alt="Housing Patterns in Kentucky Counties"
               /></a>
               <div class="card-body">
@@ -159,7 +159,7 @@
               <a target="_blank" href = "https://kwstancil.github.io/renewable-energy-usa/"
                 ><img
                   class="card-img-top"
-                  src="portfolio/images/clean-energy-usa.png"
+                  src="images/clean-energy-usa.png"
                   alt="Renewable Energy Production in the U.S."
               /></a>
               <div class="card-body">
@@ -187,7 +187,7 @@
               <div class="float-md-left mb-5 mr-md-4">
                 <img
                   class="rounded-circle img-fluid"
-                  src="portfolio/images/stancil-black-white.jpg"
+                  src="images/stancil-black-white.jpg"
                   width = "150px"
                   alt="headshot"
                 />
