--- a/index.html
+++ b/index.html
@@ -84,12 +84,7 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-              <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/"
-                ><img
-                  class="card-img-top"
-                  src="images/global-covid-vaccine-apartheid.png"
-                  alt="Global Covid Vaccine Apartheid"
-              /></a>
+              <img src="global-covid-vaccine-apartheid.png" width ="500px" alt="Global Covid Vaccine Apartheid"/>
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/">Global Covid Vaccine Apartheid</a>
@@ -105,7 +100,7 @@
               <a target="_blank" href = "https://kwstancil.github.io/poverty-usa-counties/"
                 ><img
                   class="card-img-top"
-                  src="images/patterns-economic-hardship-us-counties.png"
+                  src="patterns-economic-hardship-us-counties.png"
                   alt="Patterns of Economic Hardship in the U.S."
               /></a>
               <div class="card-body">
@@ -123,7 +118,7 @@
               <a target="_blank" href = "https://kwstancil.github.io/median-rent-usa-counties/"
                 ><img
                   class="card-img-top"
-                  src="images/median-rent-us-counties.png"
+                  src="median-rent-us-counties.png"
                   alt="Renting in the USA"
               /></a>
               <div class="card-body">
@@ -141,7 +136,7 @@
               <a target="_blank" href = "https://kwstancil.github.io/housing-patterns-ky/"
                 ><img
                   class="card-img-top"
-                  src="images/housing-patterns-ky-counties.png"
+                  src="housing-patterns-ky-counties.png"
                   alt="Housing Patterns in Kentucky Counties"
               /></a>
               <div class="card-body">
@@ -159,7 +154,7 @@
               <a target="_blank" href = "https://kwstancil.github.io/renewable-energy-usa/"
                 ><img
                   class="card-img-top"
-                  src="images/clean-energy-usa.png"
+                  src="clean-energy-usa.png"
                   alt="Renewable Energy Production in the U.S."
               /></a>
               <div class="card-body">
