--- a/index.html
+++ b/index.html
@@ -84,7 +84,12 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-              <img src="global-covid-vaccine-apartheid.png" width ="500px" alt="Global Covid Vaccine Apartheid"/>
+              <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/"
+                ><img
+                  class="card-img-top"
+                  src="global-covid-vaccine-apartheid.png"
+                  alt="Global Covid Vaccine Apartheid"
+              /></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/">Global Covid Vaccine Apartheid</a>
