--- a/index.html
+++ b/index.html
@@ -84,12 +84,9 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-              <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/"
-                ><img
-                  class="card-img-top"
-                  src="images/global-covid-vaccine-apartheid.png"
-                  alt="Global Covid Vaccine Apartheid"
-              /></a>
+              <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/">
+              <img class="card-img-top" src="images/global-covid-vaccine-apartheid.png" alt="Global Covid Vaccine Apartheid">
+              </a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/">Global Covid Vaccine Apartheid</a>
