--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -85,7 +85,7 @@
           <div class="col-lg-4 col-sm-6 portfolio-item">
             <div class="card h-100">
               <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/">
-              <img class="card-img-top" src="images/global-covid-vaccine-apartheid.png" alt="Global Covid Vaccine Apartheid">
+              <img class="card-img-top" src="images/global-covid-vaccine-apartheid.PNG" alt="Global Covid Vaccine Apartheid">
               </a>
               <div class="card-body">
                 <h4 class="card-title">
@@ -104,7 +104,7 @@
                   class="card-img-top"
                   src="patterns-economic-hardship-us-counties.png"
                   alt="Patterns of Economic Hardship in the U.S."
-              /></a>
+              ></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/poverty-usa-counties/">Patterns of Economic Hardship in the U.S.</a>
