--- a/index.html
+++ b/index.html
@@ -84,18 +84,9 @@
         <div class="row">
           <div class="col-lg-4 col-sm-6 portfolio-item">
             <div class="card h-100">
-<<<<<<< HEAD
               <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/">
-              <img class="card-img-top" src="images/global-covid-vaccine-apartheid.PNG" alt="Global Covid Vaccine Apartheid">
+              <img class="card-img-top" src="images/global-covid-vaccine-apartheid.png" alt="Global Covid Vaccine Apartheid"/>
               </a>
-=======
-              <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/"
-                ><img
-                  class="card-img-top"
-                  src="images/global-covid-vaccine-apartheid.png"
-                  alt="Global Covid Vaccine Apartheid"
-              /></a>
->>>>>>> parent of 6e3397c (Update index.html)
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/">Global Covid Vaccine Apartheid</a>
@@ -193,7 +184,7 @@
               <div class="float-md-left mb-5 mr-md-4">
                 <img
                   class="rounded-circle img-fluid"
-                  src="images/stancil-black-white.jpg"
+                  src="stancil-black-white.jpg"
                   width = "150px"
                   alt="headshot"
                 />
