--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                   class="card-img-top"
                   src="images/global-covid-vaccine-apartheid.png"
                   alt="Global Covid Vaccine Apartheid"
-              ></a>
+              /></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/">Global Covid Vaccine Apartheid</a>
@@ -107,7 +107,7 @@
                   class="card-img-top"
                   src="images/patterns-economic-hardship-us-counties.png"
                   alt="Patterns of Economic Hardship in the U.S."
-              ></a>
+              /></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/poverty-usa-counties/">Patterns of Economic Hardship in the U.S.</a>
@@ -125,7 +125,7 @@
                   class="card-img-top"
                   src="images/median-rent-us-counties.png"
                   alt="Renting in the USA"
-              ></a>
+              /></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/median-rent-usa-counties/">Renting in the USA</a>
@@ -143,7 +143,7 @@
                   class="card-img-top"
                   src="images/housing-patterns-ky-counties.png"
                   alt="Housing Patterns in Kentucky Counties"
-              ></a>
+              /></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/housing-patterns-ky/">Housing Patterns in Kentucky</a>
@@ -161,7 +161,7 @@
                   class="card-img-top"
                   src="images/clean-energy-usa.png"
                   alt="Renewable Energy Production in the U.S."
-              ></a>
+              /></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/renewable-energy-usa/">Renewable Energy Production in the U.S.</a>
@@ -187,10 +187,10 @@
               <div class="float-md-left mb-5 mr-md-4">
                 <img
                   class="rounded-circle img-fluid"
-                  src="stancil-black-white.jpg"
+                  src="images/stancil-black-white.jpg"
                   width = "150px"
                   alt="headshot"
-                >
+                />
               </div>
               <p class="lead">
                 Hi, I'm Kenny. Born and raised in Denver, I moved to Tacoma for college and graduated from Pacific Lutheran University in 2013 with a degree in political science and global studies.
