--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
           <div class="col-lg-4 col-sm-6 portfolio-item">
             <div class="card h-100">
               <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/"
-                ><img
+              ><img
                   class="card-img-top"
-                  src="images/global-covid-vaccine-apartheid.png"
+                  src="images/global-covid-vaccine-apartheid.PNG"
                   alt="Global Covid Vaccine Apartheid"
-              /></a>
+              ></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/">Global Covid Vaccine Apartheid</a>
@@ -105,9 +105,9 @@
               <a target="_blank" href = "https://kwstancil.github.io/poverty-usa-counties/"
                 ><img
                   class="card-img-top"
-                  src="images/patterns-economic-hardship-us-counties.png"
+                  src="patterns-economic-hardship-us-counties.PNG"
                   alt="Patterns of Economic Hardship in the U.S."
-              /></a>
+              ></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/poverty-usa-counties/">Patterns of Economic Hardship in the U.S.</a>
@@ -123,7 +123,7 @@
               <a target="_blank" href = "https://kwstancil.github.io/median-rent-usa-counties/"
                 ><img
                   class="card-img-top"
-                  src="images/median-rent-us-counties.png"
+                  src="median-rent-us-counties.PNG"
                   alt="Renting in the USA"
               /></a>
               <div class="card-body">
@@ -141,7 +141,7 @@
               <a target="_blank" href = "https://kwstancil.github.io/housing-patterns-ky/"
                 ><img
                   class="card-img-top"
-                  src="images/housing-patterns-ky-counties.png"
+                  src="housing-patterns-ky-counties.PNG"
                   alt="Housing Patterns in Kentucky Counties"
               /></a>
               <div class="card-body">
@@ -159,7 +159,7 @@
               <a target="_blank" href = "https://kwstancil.github.io/renewable-energy-usa/"
                 ><img
                   class="card-img-top"
-                  src="images/clean-energy-usa.png"
+                  src="clean-energy-usa.PNG"
                   alt="Renewable Energy Production in the U.S."
               /></a>
               <div class="card-body">
@@ -187,7 +187,7 @@
               <div class="float-md-left mb-5 mr-md-4">
                 <img
                   class="rounded-circle img-fluid"
-                  src="images/stancil-black-white.jpg"
+                  src="stancil-black-white.jpg"
                   width = "150px"
                   alt="headshot"
                 />
