--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
           <div class="col-lg-4 col-sm-6 portfolio-item">
             <div class="card h-100">
               <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/"
-              ><img
+                ><img
                   class="card-img-top"
-                  src="images/global-covid-vaccine-apartheid.PNG"
+                  src="images/global-covid-vaccine-apartheid.png"
                   alt="Global Covid Vaccine Apartheid"
-              ></a>
+              /></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/">Global Covid Vaccine Apartheid</a>
@@ -105,9 +105,9 @@
               <a target="_blank" href = "https://kwstancil.github.io/poverty-usa-counties/"
                 ><img
                   class="card-img-top"
-                  src="patterns-economic-hardship-us-counties.PNG"
+                  src="images/patterns-economic-hardship-us-counties.png"
                   alt="Patterns of Economic Hardship in the U.S."
-              ></a>
+              /></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/poverty-usa-counties/">Patterns of Economic Hardship in the U.S.</a>
@@ -123,9 +123,9 @@
               <a target="_blank" href = "https://kwstancil.github.io/median-rent-usa-counties/"
                 ><img
                   class="card-img-top"
-                  src="median-rent-us-counties.PNG"
+                  src="images/median-rent-us-counties.png"
                   alt="Renting in the USA"
-              ></a>
+              /></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/median-rent-usa-counties/">Renting in the USA</a>
@@ -141,9 +141,9 @@
               <a target="_blank" href = "https://kwstancil.github.io/housing-patterns-ky/"
                 ><img
                   class="card-img-top"
-                  src="housing-patterns-ky-counties.PNG"
+                  src="images/housing-patterns-ky-counties.png"
                   alt="Housing Patterns in Kentucky Counties"
-              ></a>
+              /></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/housing-patterns-ky/">Housing Patterns in Kentucky</a>
@@ -159,9 +159,9 @@
               <a target="_blank" href = "https://kwstancil.github.io/renewable-energy-usa/"
                 ><img
                   class="card-img-top"
-                  src="clean-energy-usa.PNG"
+                  src="images/clean-energy-usa.png"
                   alt="Renewable Energy Production in the U.S."
-              ></a>
+              /></a>
               <div class="card-body">
                 <h4 class="card-title">
                   <a target="_blank" href = "https://kwstancil.github.io/renewable-energy-usa/">Renewable Energy Production in the U.S.</a>
@@ -187,10 +187,10 @@
               <div class="float-md-left mb-5 mr-md-4">
                 <img
                   class="rounded-circle img-fluid"
-                  src="stancil-black-white.jpg"
+                  src="images/stancil-black-white.jpg"
                   width = "150px"
                   alt="headshot"
-                >
+                />
               </div>
               <p class="lead">
                 Hi, I'm Kenny. Born and raised in Denver, I moved to Tacoma for college and graduated from Pacific Lutheran University in 2013 with a degree in political science and global studies.
