--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
               <a target="_blank" href = "https://kwstancil.github.io/poverty-usa-counties/"
                 ><img
                   class="card-img-top"
-                  src="images/patterns-economic-hardship-us-counties.png"
+                  src="images/patterns-economic-hardship-us-counties.PNG"
                   alt="Patterns of Economic Hardship in the U.S."
               /></a>
               <div class="card-body">
@@ -123,7 +123,7 @@
               <a target="_blank" href = "https://kwstancil.github.io/median-rent-usa-counties/"
                 ><img
                   class="card-img-top"
-                  src="images/median-rent-us-counties.png"
+                  src="images/median-rent-us-counties.PNG"
                   alt="Renting in the USA"
               /></a>
               <div class="card-body">
@@ -141,7 +141,7 @@
               <a target="_blank" href = "https://kwstancil.github.io/housing-patterns-ky/"
                 ><img
                   class="card-img-top"
-                  src="images/housing-patterns-ky-counties.png"
+                  src="images/housing-patterns-ky-counties.PNG"
                   alt="Housing Patterns in Kentucky Counties"
               /></a>
               <div class="card-body">
@@ -159,7 +159,7 @@
               <a target="_blank" href = "https://kwstancil.github.io/renewable-energy-usa/"
                 ><img
                   class="card-img-top"
-                  src="images/clean-energy-usa.png"
+                  src="images/clean-energy-usa.PNG"
                   alt="Renewable Energy Production in the U.S."
               /></a>
               <div class="card-body">
