--- a/index.html
+++ b/index.html
@@ -95,7 +95,13 @@
                   <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/">Global Covid Vaccine Apartheid</a>
                 </h4>
                 <p class="card-text">
-                  This map depicts unequal access to Covid-19 vaccines around the world.
+                  This map depicts unequal access to Covid-19 vaccines around the world and
+                  also highlights which countries support temporarily suspending intellectual
+                  property restrictions to boost the production of life-saving doses.
+                  <br>
+                  It was generated in Carto using  GeoJSON files containing national inoculation rates
+                  (courtesy of Our World in Data) as well as governments' positions on the TRIPS waiver proposal
+                  under negotiation at the WTO (courtesy of Doctors Without Borders)
                 </p>
               </div>
             </div>
@@ -114,6 +120,9 @@
                 </h4>
                 <p class="card-text">
                   This map documents the poverty rate in each U.S. county.
+                  <br>
+                  It was generated in Leaflet with a geoJson file produced by joining 2019 data from the U.S. Census Bureau's
+                  Small Area Income and Poverty Estimates (SAIPE) Program with U.S. county polygons.
                 </p>
               </div>
             </div>
