--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                   <br>
                   It was generated in Carto using  GeoJSON files containing national inoculation rates
                   (courtesy of Our World in Data) as well as governments' positions on the TRIPS waiver proposal
-                  under negotiation at the WTO (courtesy of Doctors Without Borders)
+                  under negotiation at the WTO (courtesy of Doctors Without Borders).
                 </p>
               </div>
             </div>
