--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
                 </h4>
                 <p class="card-text">
                   This map depicts unequal access to Covid-19 vaccines around the world and
-                  also highlights which countries support temporarily suspending intellectual
+                  also highlights which countries support an initiative to temporarily suspend intellectual
                   property restrictions to boost the production of life-saving doses.
-                  <br>
+                </p>
+                <p>
                   It was generated in Carto using  GeoJSON files containing national inoculation rates
                   (courtesy of Our World in Data) as well as governments' positions on the TRIPS waiver proposal
                   under negotiation at the WTO (courtesy of Doctors Without Borders).
