--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                   dams, geothermal power plants, and nuclear power plants in the U.S.
                 </p>
                 <p>
-                  It was generated in Leaflet using 2021 data from the U.S. Energy Information Administration (EIA). 
+                  It was generated in Leaflet using 2021 data from the U.S. Energy Information Administration (EIA).
                 </p>
               </div>
             </div>
@@ -235,8 +235,7 @@
               <dd>PostGIS/SQL for data querying</dd>
               <dt>Web Mapping</dt>
               <dd>
-                Leaflet for raster tilesets, basic thematic mapping, and telling
-                stories with maps
+                Leaflet, Carto, Mapbox
               </dd>
               <dt>Coding</dt>
               <dd>HTML, CSS, JavaScript</dd>
