consider changing column break point

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <section id="projects" class="bg-light">
       <div class="container">
         <div class="row">
-          <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="card h-100">
               <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/"
                 ><img
@@ -107,7 +107,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="card h-100">
               <a target="_blank" href = "https://kwstancil.github.io/poverty-usa-counties/"
                 ><img
@@ -129,7 +129,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="card h-100">
               <a target="_blank" href = "https://kwstancil.github.io/median-rent-usa-counties/"
                 ><img
@@ -151,7 +151,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="card h-100">
               <a target="_blank" href = "https://kwstancil.github.io/housing-patterns-ky/"
                 ><img
@@ -174,7 +174,7 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-sm-6 portfolio-item">
+          <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="card h-100">
               <a target="_blank" href = "https://kwstancil.github.io/renewable-energy-usa/"
                 ><img
