keep image heights the same

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="card h-100">
               <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/"
                 ><img
-                  class="card-img-top"
+                  class="card-img-top fit-image"
                   src="images/global-covid-vaccine-apartheid.PNG"
                   alt="Global Covid Vaccine Apartheid"
               /></a>
@@ -111,7 +111,7 @@
             <div class="card h-100">
               <a target="_blank" href = "https://kwstancil.github.io/poverty-usa-counties/"
                 ><img
-                  class="card-img-top"
+                  class="card-img-top fit-image"
                   src="images/patterns-economic-hardship-us-counties.PNG"
                   alt="Patterns of Economic Hardship in the U.S."
               /></a>
@@ -133,7 +133,7 @@
             <div class="card h-100">
               <a target="_blank" href = "https://kwstancil.github.io/median-rent-usa-counties/"
                 ><img
-                  class="card-img-top"
+                  class="card-img-top fit-image"
                   src="images/median-rent-us-counties.PNG"
                   alt="Renting in the USA"
               /></a>
@@ -155,7 +155,7 @@
             <div class="card h-100">
               <a target="_blank" href = "https://kwstancil.github.io/housing-patterns-ky/"
                 ><img
-                  class="card-img-top"
+                  class="card-img-top fit-image"
                   src="images/housing-patterns-ky-counties.PNG"
                   alt="Housing Patterns in Kentucky Counties"
               /></a>
@@ -178,7 +178,7 @@
             <div class="card h-100">
               <a target="_blank" href = "https://kwstancil.github.io/renewable-energy-usa/"
                 ><img
-                  class="card-img-top"
+                  class="card-img-top fit-image"
                   src="images/clean-energy-usa.PNG"
                   alt="Renewable Energy Production in the U.S."
               /></a>
