example header with a little ✨

--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
     </nav>
 
     <!-- Welcome Section -->
-    <header class="text-white">
+    <header class="text-white boss-image ">
       <div class="container text-center">
         <h1>Mapping Portfolio</h1>
+        <h2 class='fade-in'>A byline here would be nice. A mission statement, fav quote, etc.</h2>
       </div>
     </header>
 
