--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="card h-100">
-              <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/"
+              <a href="#" data-bs-toggle="modal" data-bs-target="#proj1"
                 ><img
                   class="card-img-top fit-image"
                   src="images/global-covid-vaccine-apartheid.PNG"
@@ -105,6 +105,25 @@
                   (courtesy of Our World in Data) as well as governments' positions on the TRIPS waiver proposal
                   under negotiation at the WTO (courtesy of Doctors Without Borders).
                 </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Modal for above card. -->
+          <div class="modal fade" id="proj1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h2 class="modal-title" id="exampleModalLabel">Global Covid Vaccine Apartheid</h2>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <img src="images/global-covid-vaccine-apartheid.PNG" class="mw-100" alt="Preview of map.">
+                  <h5>Visit <a href="#">map</a></h5>
+                </div>
+                <!-- <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div> -->
               </div>
             </div>
           </div>
