--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
     <header class="text-white boss-image ">
       <div class="container text-center">
         <h1>Mapping Portfolio</h1>
-        <h2 class='fade-in'>A byline here would be nice. A mission statement, fav quote, etc.</h2>
+        <h2 class='fade-in'>"I have... to prove that society knows how injurious such conditions are to the health and the life
+                            of the workers, and yet does nothing to improve these conditions"—Friedrich Engels.</h2>
       </div>
     </header>
 
