--- a/index.html
+++ b/index.html
@@ -74,9 +74,14 @@
     <!-- Welcome Section -->
     <header class="text-white boss-image ">
       <div class="container text-center">
-        <h1>Mapping Portfolio</h1>
+        <h1>Geographies of Inequality, Spaces of Hope</h1>
         <h2 class='fade-in'>"I have... to prove that society knows how injurious such conditions are to the health and the life
-                            of the workers, and yet does nothing to improve these conditions"—Friedrich Engels.</h2>
+                            of the workers, and yet does nothing to improve these conditions."—Friedrich Engels
+                          <br>
+                          "I had always thought that the purpose of More's <i>Utopia</i> was not to provide a blueprint for some future
+                          but to hold up for inspection the ridiculous waste and foolishness of his times, to insist that things
+                          could and must be better."—David Harvey
+        </h2>
       </div>
     </header>
 
