--- a/index.html
+++ b/index.html
@@ -72,7 +72,12 @@
     </nav>
 
     <!-- Welcome Section -->
-    <header class="text-white boss-image ">
+    <header class="text-white boss-image">
+      <img
+        class = "card-img-top fit-image"
+        src = "images/mexico.PNG"
+        alt = "Mexico City"
+        />
       <div class="container text-center">
         <h1>Geographies of Inequality, Spaces of Hope</h1>
         <h2 class='fade-in'>"I have... to prove that society knows how injurious such conditions are to the health and the life
