--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <!-- Welcome Section -->
     <header
-        class = "card-img-top fit-image"
+        class="text-white boss-image"
         src = "images/mexico.PNG"
         alt = "Mexico City"/>
       <div class="container text-center">
