--- a/index.html
+++ b/index.html
@@ -72,10 +72,7 @@
     </nav>
 
     <!-- Welcome Section -->
-    <header
-        class="text-white boss-image"
-        src = "images/mexico.PNG"
-        alt = "Mexico City"/>
+    <header class="text-white boss-image">
       <div class="container text-center">
         <h1>Geographies of Inequality, Spaces of Hope</h1>
         <h2 class='fade-in'>"I have... to prove that society knows how injurious such conditions are to the health and the life
