--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </nav>
 
     <!-- Welcome Section -->
-    <header class="text-white boss-image">
+    <header class="text-white">
       <div class = "image">
         <img
           src="images/mexico.PNG"
