--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     <!-- Welcome Section -->
     <header class="text-white">
-      <div class = "image">
+      <div class = "boss-image">
         <img
           src="images/mexico.PNG"
           alt = "Mexico"/>
