--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
     </nav>
 
     <!-- Welcome Section -->
-    <header class="text-white">
-      <div class = "boss-image">
+    <header
         <img
+          class="text-white boss-image"
           src="images/mexico.PNG"
           alt = "Mexico"/>
       <div class="container text-center">
