--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </nav>
 
     <!-- Welcome Section -->
-    <header
+    <header class = "text-white boss-image">
         <img
           class="text-white boss-image"
           src="images/mexico.PNG"
