--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
         <h2 class='fade-in'>"I had always thought that the purpose of More's <i>Utopia</i> was not to provide a blueprint for some future
                           but to hold up for inspection the ridiculous waste and foolishness of his times, to insist that things
                           could and must be better."—David Harvey</h2>
+        <p></p>
+        <h3 class = 'fade-in'> "These two neighborhoods in Johannesburg, South Africa exemplify the side-by-side existence of affluence and deprivation. Photo: Johnny Miller, <a href = "https://unequalscenes.com/">Unequal Scenes</a>
       </div>
     </header>
 
