added modal boxes

--- a/index.html
+++ b/index.html
@@ -200,6 +200,26 @@
               </div>
             </div>
           </div>
+
+          <!-- Modal for above card. -->
+          <div class="modal fade" id="proj1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h2 class="modal-title" id="exampleModalLabel">Patterns of Economic Hardship in the U.S.</h2>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <img src="images/patterns-economic-hardship-us-counties.PNG" class="mw-100" alt="Preview of map.">
+                  <h5>Visit <a href="#">map</a></h5>
+                </div>
+                <!-- <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="card h-100">
               <a target="_blank" href = "https://kwstancil.github.io/housing-patterns-ky/"
@@ -223,6 +243,26 @@
               </div>
             </div>
           </div>
+
+          <!-- Modal for above card. -->
+          <div class="modal fade" id="proj1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h2 class="modal-title" id="exampleModalLabel">Patterns of Economic Hardship in the U.S.</h2>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <img src="images/patterns-economic-hardship-us-counties.PNG" class="mw-100" alt="Preview of map.">
+                  <h5>Visit <a href="#">map</a></h5>
+                </div>
+                <!-- <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="card h-100">
               <a target="_blank" href = "https://kwstancil.github.io/renewable-energy-usa/"
@@ -245,6 +285,26 @@
               </div>
             </div>
           </div>
+
+          <!-- Modal for above card. -->
+          <div class="modal fade" id="proj1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog modal-lg">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h2 class="modal-title" id="exampleModalLabel">Patterns of Economic Hardship in the U.S.</h2>
+                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                  <img src="images/patterns-economic-hardship-us-counties.PNG" class="mw-100" alt="Preview of map.">
+                  <h5>Visit <a href="#">map</a></h5>
+                </div>
+                <!-- <div class="modal-footer">
+                  <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div> -->
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </section>
