--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="card h-100">
-              <a target="_blank" href = "https://kwstancil.github.io/poverty-usa-counties/"
+              <a href="#" data-bs-toggle="modal" data-bs-target="#proj2"
                 ><img
                   class="card-img-top fit-image"
                   src="images/patterns-economic-hardship-us-counties.PNG"
@@ -160,7 +160,7 @@
           </div>
 
           <!-- Modal for above card. -->
-          <div class="modal fade" id="proj1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal fade" id="proj2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
