--- a/index.html
+++ b/index.html
@@ -100,9 +100,7 @@
                   alt="Global Covid Vaccine Apartheid"
               /></a>
               <div class="card-body">
-                <h4 class="card-title">
-                  <a target="_blank" href = "https://kwstancil.github.io/global-covid-vaccine-apartheid/">Global Covid Vaccine Apartheid</a>
-                </h4>
+                <h4 class="card-title">Global Covid Vaccine Apartheid</h4>
                 <p class="card-text">
                   This map depicts unequal access to Covid-19 vaccines around the world and
                   also highlights which countries support an initiative to temporarily suspend intellectual
@@ -127,7 +125,7 @@
                 </div>
                 <div class="modal-body">
                   <img src="images/global-covid-vaccine-apartheid.PNG" class="mw-100" alt="Preview of map.">
-                  <h5>Visit <a href="#">map</a></h5>
+                  <h5>Visit <a href="https://kwstancil.github.io/global-covid-vaccine-apartheid/">map</a></h5>
                 </div>
                 <!-- <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
