--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </div>
                 <div class="modal-body">
                   <img src="images/patterns-economic-hardship-us-counties.PNG" class="mw-100" alt="Preview of map.">
-                  <h5>Visit <a href="https://kwstancil.github.io/median-rent-usa-counties/">map</a></h5>
+                  <h5>Visit <a href="https://kwstancil.github.io/poverty-usa-counties/">map</a></h5>
                 </div>
                 <!-- <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -200,12 +200,12 @@
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h2 class="modal-title" id="exampleModalLabel">Patterns of Economic Hardship in the U.S.</h2>
+                  <h2 class="modal-title" id="exampleModalLabel">Renting in the USA</h2>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <img src="images/patterns-economic-hardship-us-counties.PNG" class="mw-100" alt="Preview of map.">
-                  <h5>Visit <a href="https://kwstancil.github.io/poverty-usa-counties/">map</a></h5>
+                  <img src="images/median-rent-us-counties.PNG" class="mw-100" alt="Preview of map.">
+                  <h5>Visit <a href="https://kwstancil.github.io/median-rent-usa-counties/">map</a></h5>
                 </div>
                 <!-- <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
@@ -241,11 +241,11 @@
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h2 class="modal-title" id="exampleModalLabel">Patterns of Economic Hardship in the U.S.</h2>
+                  <h2 class="modal-title" id="exampleModalLabel">Housing Patterns in Kentucky</h2>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <img src="images/patterns-economic-hardship-us-counties.PNG" class="mw-100" alt="Preview of map.">
+                  <img src="images/housing-patterns-ky-counties.PNG" class="mw-100" alt="Preview of map.">
                   <h5>Visit <a href="https://kwstancil.github.io/housing-patterns-ky/">map</a></h5>
                 </div>
                 <!-- <div class="modal-footer">
@@ -281,11 +281,11 @@
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h2 class="modal-title" id="exampleModalLabel">Patterns of Economic Hardship in the U.S.</h2>
+                  <h2 class="modal-title" id="exampleModalLabel">Renewable Energy Production in the U.S.</h2>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <img src="images/patterns-economic-hardship-us-counties.PNG" class="mw-100" alt="Preview of map.">
+                  <img src="images/clean-energy-usa.PNG" class="mw-100" alt="Preview of map.">
                   <h5>Visit <a href="https://kwstancil.github.io/renewable-energy-usa/">map</a></h5>
                 </div>
                 <!-- <div class="modal-footer">
