updated covid-19 vaccine apartheid map

--- a/index.html
+++ b/index.html
@@ -100,16 +100,18 @@
                   alt="Global Covid Vaccine Apartheid"
               /></a>
               <div class="card-body">
-                <h4 class="card-title">Global Covid Vaccine Apartheid</h4>
+                <h4 class="card-title">Global Covid-19 Vaccine Apartheid</h4>
                 <p class="card-text">
-                  This map depicts unequal access to Covid-19 vaccines around the world and
-                  also highlights which countries support an initiative to temporarily suspend intellectual
-                  property restrictions to boost the production of life-saving doses.
+                  This map depicts unequal access to Covid-19 vaccines around the world, highlights whether
+                  governments support or oppose an initiative to temporarily suspend intellectual property
+                  restrictions to boost the supply of lifesaving doses, and shows where untapped
+                  vaccine vaccine production potential exists.
                 </p>
                 <p>
-                  It was generated in Carto using  GeoJSON files containing national inoculation rates
-                  (courtesy of Our World in Data) as well as governments' positions on the TRIPS waiver proposal
-                  under negotiation at the WTO (courtesy of Doctors Without Borders).
+                  It was generated in Leaflet using  GeoJSON files containing national vaccination rates
+                  (courtesy of Our World in Data), governments' positions on the TRIPS waiver proposal
+                  under negotiation at the WTO (courtesy of Doctors Without Borders), and the locations of
+                  idle mRNA manufacturing capacity (Doctors Without Borders and the Access IBSA project).
                 </p>
               </div>
             </div>
@@ -120,12 +122,12 @@
             <div class="modal-dialog modal-lg">
               <div class="modal-content">
                 <div class="modal-header">
-                  <h2 class="modal-title" id="exampleModalLabel">Global Covid Vaccine Apartheid</h2>
+                  <h2 class="modal-title" id="exampleModalLabel">Global Covid-19 Vaccine Apartheid</h2>
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <img src="images/global-covid-vaccine-apartheid.PNG" class="mw-100" alt="Preview of map.">
-                  <h5>Visit <a href="https://kwstancil.github.io/global-covid-vaccine-apartheid/">map</a></h5>
+                  <img src="images/global-covid-19-vaccine-apartheid.PNG" class="mw-100" alt="Preview of map.">
+                  <h5>Visit <a href="https://kwstancil.github.io/global-covid-19-vaccine-apartheid/">map</a></h5>
                 </div>
                 <!-- <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
