--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                   This map depicts unequal access to Covid-19 vaccines around the world, highlights whether
                   governments support or oppose an initiative to temporarily suspend intellectual property
                   restrictions to boost the supply of lifesaving doses, and shows where untapped
-                  vaccine vaccine production potential exists.
+                  vaccine production potential exists.
                 </p>
                 <p>
                   It was generated in Leaflet using  GeoJSON files containing national vaccination rates
