--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
               <a href="#" data-bs-toggle="modal" data-bs-target="#proj2"
                 ><img
                   class="card-img-top fit-image"
-                  src="images/FIX123456.PNG"
+                  src="images/us-unemployment-2001-2015.PNG"
                   alt="Unemployment Rate in U.S. Counties, 2001-2015"
               /></a>
               <div class="card-body">
@@ -165,7 +165,7 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <img src="images/FIX123456.PNG" class="mw-100" alt="Preview of map.">
+                  <img src="images/us-unemployment-2001-2015.PNG" class="mw-100" alt="Preview of map.">
                   <h5>Visit <a href="https://kwstancil.github.io/us-counties-unemployment-2001-2015/">map</a></h5>
                 </div>
                 <!-- <div class="modal-footer">
