--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
               <a href="#" data-bs-toggle="modal" data-bs-target="#proj3"
                 ><img
                   class="card-img-top fit-image"
-                  src="images/FIX123456.PNG"
+                  src="images/kenya-schooling-gender.PNG"
                   alt="Primary School Enrollment in Kenya by Gender"
               /></a>
               <div class="card-body">
@@ -204,7 +204,7 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <img src="images/FIX123456.PNG" class="mw-100" alt="Preview of map.">
+                  <img src="images/kenya-schooling-gender.PNG" class="mw-100" alt="Preview of map.">
                   <h5>Visit <a href="https://kwstancil.github.io/kenya-primary-school-enrollment-gender/">map</a></h5>
                 </div>
                 <!-- <div class="modal-footer">
