--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
               <div class="card-body">
                 <h4 class="card-title">Unemployment Rate in U.S. Counties, 2001-2015</h4>
                 <p class="card-text">
-                  This map depicts MORE
+                  This map depicts TEST
                 </p>
                 <p>
                   It was generated in Leaflet using
