--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               <a href="#" data-bs-toggle="modal" data-bs-target="#proj4"
                 ><img
                   class="card-img-top fit-image"
-                  src="images/FIX123456.PNG"
+                  src="images/ca-employment-2010.PNG"
                   alt="California Employment Patterns, 2010"
               /></a>
               <div class="card-body">
@@ -243,7 +243,7 @@
                   <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                  <img src="images/FIX123456.PNG" class="mw-100" alt="Preview of map.">
+                  <img src="images/ca-employment-2010.PNG" class="mw-100" alt="Preview of map.">
                   <h5>Visit <a href="https://kwstancil.github.io/california-employment-patterns-2010/">map</a></h5>
                 </div>
                 <!-- <div class="modal-footer">
